syntax = "proto3";

package model;

option go_package = "github.com/tislib/apibrew/pkg/model";

message AppConfig {
  string host = 1;
  int32 port = 2;
  string jwtPrivateKey = 3;
  string jwtPublicKey = 4;
  bool disableAuthentication = 5;
  bool disableCache = 6;
  string pluginsPath = 7;
}

message InitData {
  AppConfig config = 1;
}